--- a/index.html
+++ b/index.html
@@ -5,140 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>WhatsApp Form</title>
-    <style>
-*{
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-}
 
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    row-gap: 10px;
-    background-image: url(3.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.container{
-    border-radius: 15px;
-    background-color: hsl(146, 69%, 50%);
-    margin-top: 20px;
-    padding: 50px;
-}
-
-h1{
-    display: flex;
-    color: white;
-    font-size: 3.5rem;
-    text-align: center;
-    padding: 10px;
-    margin-bottom: 20px;
-}
-
-svg{
-    margin-right: 10px;
-}
-
-form{
-    display: flex;
-    flex-direction: column;
-}
-
-label{
-    color: white;
-    font-weight: bold;
-    font-size: 1rem;
-    margin-bottom: 5px;
-}
-
-input{
-    font-size: 18px;
-    font-weight: lighter;
-    color: white;
-    margin-bottom: 10px;
-    padding: 5px;
-    background-color: hsl(146, 69%, 50%);
-    border: none;
-    border-bottom: 1px solid white;
-    outline: none;
-    transition: all 0.15s;
-}
-
-@keyframes borderColorChange {
-    0% {
-        border-color: white;
-    }
-    100% {
-        border-color: limegreen;
-    }
-}
-
-input:focus{
-    border: none;
-    background-color: hsl(146, 69%, 50%);
-    animation: borderColorChange 0.15s linear forwards;
-    border-bottom: 1px solid limegreen;
-}
-
-button{
-    background-color: white;
-    border: none;
-    font-weight: bolder;
-    color: hsl(146, 69%, 50%);
-    border-radius: 12px;
-    padding: 8px;
-    transition: background-color 0.15s;
-}
-
-button:hover{
-    background-color: hsl(146, 69%, 50%);
-    color: white;
-    border: 1px solid white;
-}
-
-button:active{
-    background-color: hsl(146, 69%, 60%);
-    color: white;
-}
-
-/* Media queries for cellphones */
-@media (max-width: 600px) {
-    body {
-        padding: 20px;
-    }
-
-    .container {
-        padding: 20px;
-        margin-top: 10px;
-    }
-
-    h1 {
-        font-size: 2rem;
-    }
-
-    input {
-        font-size: 16px;
-        padding: 8px;
-    }
-
-    button {
-        padding: 10px;
-    }
-
-    svg {
-        width: 30px;
-        height: 30px;
-    }
-
-}
-
-    </style>
 </head>
 <body>
     <div class="container">
@@ -159,18 +26,7 @@ button:active{
         </div>
     </div>
   
-      <script>
-
-        function sendToWhatsApp(){
-
-            const inputEmail = document.getElementById("email").value;
-            const  inputName = document.getElementById("fname").value;
-
-            const formUrl = "https://wa.me/+27734737725" +  "?text=" 
-            +"Hey, I hope you are well, my name "+encodeURIComponent(inputName)+ " and my email is "+encodeURIComponent(inputEmail)+ ". I would like to book you for an Event. ";
-            window.open(formUrl, '_blank').focus();
-
-        }   
+      <script src="index.js">
       </script>
 </body>
 </html>
