--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <label for="fname">Name:</label>
                 <input type="text" id="fname" name="fname" required>
 
-                <button type="button" onclick="sendToWhatsApp()">Submit</button>
+                <button type="button" onclick="sendToWhatsApp()">Submit to WhatsApp</button>
             </form>
         </div>
     </div>
